# flame

./: .clang-format  CMakeLists.txt  LICENSE
include/flame/: flame.hpp  raster.hpp
include/flame/bits/: raster.hpp
src/flame/: raster.cpp
